Add additional airlines to the AIRLINES list

--- a/index.html
+++ b/index.html
@@ -220,11 +220,29 @@ let chosenDur = null;
 
 /* UI data */
 const AIRLINES = [
-  {name:"Lufthansa", hubs:["EDDF","EDDM"]},
-  {name:"Austrian", hubs:["LOWW"]},
-  {name:"Swiss", hubs:["LSZH"]},
-  {name:"Eurowings", hubs:["EDDF","EDDM","EDDH"]},
-  {name:"Brussels Airlines", hubs:["EBBR"]}
+  { name: "Lufthansa", hubs: ["EDDF","EDDM"] },
+  { name: "Austrian", hubs: ["LOWW"] },
+  { name: "Swiss", hubs: ["LSZH"] },
+  { name: "Eurowings", hubs: ["EDDF","EDDM","EDDH"] },
+  { name: "Brussels Airlines", hubs: ["EBBR"] },
+
+  { name: "AirBaltic", hubs: ["EVRA","EVRA"] },
+  { name: "Discover", hubs: ["EDDF"] },
+  { name: "Edelweiss", hubs: ["LSZH"] },
+  { name: "Lufthansa Cargo", hubs: ["EDDF"] },
+  { name: "Lufthansa CityLine", hubs: ["EDDF","EDDM"] },
+  { name: "Lufthansa City", hubs: ["EDDM"] },
+  { name: "Lufthansa Technik", hubs: ["EDDF"] },
+  { name: "AirDolomiti", hubs: ["EDDM"] },
+  { name: "Lufthansa Private Jet", hubs: ["EDDF"] },
+  { name: "ITA Airways", hubs: ["LIRF"] },
+  { name: "Wideroe", hubs: ["ENBR"] },
+  { name: "Norwegian Airlines", hubs: ["ENGM","ENBR"] },
+  { name: "Finnair", hubs: ["EFHK"] },
+  { name: "SAS", hubs: ["EKCH","EKTB"] },
+  { name: "Condor", hubs: ["EDDH","EDDF"] },
+  { name: "AeroLogic", hubs: ["EDDF"] },
+  { name: "SunExpress", hubs: ["EDDF","EDDM"] }
 ];
 const DURATIONS = [
   {label:"1-2ч",min:60,max:120},
