--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Lufthansa Group Virtual — UI refined</title>
+  <title>Lufthansa Group Virtual — refined layout</title>
   <meta name="color-scheme" content="dark light">
   <style>
     :root{
-      --bg-1:#041528; --bg-2:#082d46; --accent:#ffd700; --muted:#9fb6d6; --text:#eaf4ff;
+      --bg-1:#041528; --bg-2:#073044; --accent:#ffd700; --muted:#9fb6d6; --text:#eaf4ff;
       --card:#072033; --glass:rgba(255,255,255,0.03); --radius:12px; --shadow:0 14px 40px rgba(2,8,20,0.6);
-      --gap:10px; --transition:220ms; --max-width:1200px;
-      --panel-padding:14px;
+      --gap:10px; --transition:220ms; --max-width:1200px; --panel-padding:14px;
     }
     *{box-sizing:border-box}
     html,body{height:100%}
@@ -48,12 +47,8 @@
       gap:10px;
       margin-top:12px;
     }
-    @media(max-width:1100px){
-      .airline-groups{grid-template-columns:repeat(2,1fr)}
-    }
-    @media(max-width:700px){
-      .airline-groups{grid-template-columns:1fr}
-    }
+    @media(max-width:1100px){ .airline-groups{grid-template-columns:repeat(2,1fr)} }
+    @media(max-width:700px){ .airline-groups{grid-template-columns:1fr} }
 
     .airline-group{border-radius:10px;overflow:hidden;border:1px solid rgba(255,255,255,0.03);background:linear-gradient(180deg,rgba(255,255,255,0.004),transparent)}
     .airline-group-head{display:flex;align-items:center;justify-content:space-between;padding:10px 12px;cursor:pointer;user-select:none}
@@ -67,8 +62,8 @@
     .airline-badge{width:36px;height:36px;border-radius:8px;background:rgba(255,255,255,0.02);display:flex;align-items:center;justify-content:center;font-weight:900;color:var(--accent);flex-shrink:0}
     .airline-meta{font-size:12px;color:var(--muted);line-height:1.05;white-space:nowrap;overflow:hidden;text-overflow:ellipsis}
 
-    /* ---------- Fleet: redesigned bottom / compact ---------- */
-    .fleet-panel{margin-top:10px;padding:12px;border-radius:10px;background:linear-gradient(180deg,#052b3a,#043141);border:1px solid rgba(255,255,255,0.03)}
+    /* ---------- Fleet in right panel ---------- */
+    .fleet-panel{padding:12px;border-radius:10px;background:linear-gradient(180deg,#041f2a,#03222a);border:1px solid rgba(255,255,255,0.03)}
     .fleet-list{display:flex;flex-direction:column;gap:8px;margin-top:8px}
     .fleet-row{display:flex;align-items:center;gap:12px;padding:10px;border-radius:10px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);border:1px solid rgba(255,255,255,0.02)}
     .fleet-left{display:flex;align-items:center;gap:12px;min-width:0}
@@ -80,8 +75,6 @@
     .fleet-meta{font-size:12px;color:var(--muted)}
     .status-badge{padding:6px 8px;border-radius:8px;font-weight:800;font-size:12px}
 
-    /* bottom actions bar improved */
-    .bottom-bar{display:flex;gap:8px;align-items:center;margin-top:12px;flex-wrap:wrap}
     .muted-note{font-size:12px;color:var(--muted)}
 
     /* responsive adjustments */
@@ -116,13 +109,13 @@
       <div style="display:flex;justify-content:space-between;align-items:center">
         <div>
           <h2 id="main-title" style="margin:0;color:var(--accent)">Генерация рейса</h2>
-          <div class="small" style="margin-top:6px">Группы хабов в три колонки; коснись заголовка группы — свернёшь/развернёшь</div>
+          <div class="small" style="margin-top:6px">Группы хабов: 3 колонки на широких экранах; коснись заголовка группы — свернёшь/развернёшь</div>
         </div>
         <div class="small">Данные демонстрационные</div>
       </div>
 
       <div class="grid" style="margin-top:12px">
-        <!-- left: airlines and durations -->
+        <!-- left column -->
         <div>
           <div class="panel">
             <h3>Авиакомпания</h3>
@@ -131,7 +124,7 @@
             <h3 style="margin-top:12px">Длительность</h3>
             <div id="durations" style="margin-top:8px"></div>
 
-            <div class="controls">
+            <div class="controls" style="margin-top:12px">
               <button id="gen" class="btn btn-primary">Сгенерировать</button>
               <button id="demo" class="btn btn-ghost">Демо</button>
               <button id="reset" class="btn btn-ghost">Сброс</button>
@@ -141,41 +134,41 @@
 
             <div id="result" class="result" role="status" aria-live="polite"></div>
           </div>
+        </div>
 
-          <!-- improved bottom fleet panel inside left column for better flow -->
-          <div class="fleet-panel" style="margin-top:12px">
+        <!-- right column: fleet + info -->
+        <aside>
+          <div class="fleet-panel panel" style="margin-bottom:12px">
             <div style="display:flex;align-items:center;justify-content:space-between">
               <div style="display:flex;flex-direction:column">
                 <div style="font-weight:900">Флот</div>
-                <div class="small" style="margin-top:4px">Компактный список; город и ICAO показаны</div>
+                <div class="small" style="margin-top:4px">Город (ICAO) · дальность · места · статус</div>
               </div>
-              <div class="bottom-bar">
+              <div style="display:flex;gap:8px">
                 <button id="refreshFleet" class="btn btn-ghost">Обновить</button>
                 <button id="showFleetLog" class="btn btn-ghost">Показать лог</button>
               </div>
             </div>
-
             <div id="fleetList" class="fleet-list"></div>
           </div>
-        </div>
 
-        <!-- right: info & summary -->
-        <aside class="panel info" aria-label="Информация">
-          <h3>Инфо</h3>
-          <div style="margin-top:8px" class="small">Всего маршрутов: <strong id="routesCount">—</strong></div>
-          <div style="margin-top:6px" class="small">Хабы: EDDF — Frankfurt, EDDM — Munich</div>
+          <div class="panel" style="margin-top:8px">
+            <h3>Инфо</h3>
+            <div style="margin-top:8px" class="small">Всего маршрутов: <strong id="routesCount">—</strong></div>
+            <div style="margin-top:6px" class="small">Хабы: EDDF — Frankfurt, EDDM — Munich</div>
 
-          <h3 style="margin-top:12px">Журнал назначений</h3>
-          <div id="assignLog" class="small" style="margin-top:8px">Пока пусто</div>
+            <h3 style="margin-top:12px">Журнал назначений</h3>
+            <div id="assignLog" class="small" style="margin-top:8px">Пока пусто</div>
 
-          <div style="margin-top:12px">
-            <button id="clearLog" class="btn btn-ghost">Очистить журнал</button>
-          </div>
+            <div style="margin-top:12px">
+              <button id="clearLog" class="btn btn-ghost">Очистить журнал</button>
+            </div>
 
-          <h3 style="margin-top:12px">Подсказки</h3>
-          <div class="small" style="margin-top:8px">
-            - Нажми на название группы, чтобы свернуть/развернуть<br>
-            - На телефоне список автоматически упрощается
+            <h3 style="margin-top:12px">Подсказки</h3>
+            <div class="small" style="margin-top:8px">
+              - Нажми на заголовок группы, чтобы свернуть/развернуть<br>
+              - На телефоне список автоматически упрощается
+            </div>
           </div>
         </aside>
       </div>
@@ -183,7 +176,7 @@
   </div>
 
 <script>
-/* ================= DATA (same demo data) ================= */
+/* ================= DATA ================= */
 const ROUTES = [
   {"fromCity":"Frankfurt am Main","fromCountry":"Germany","fromICAO":"EDDF","toCity":"Oslo","toCountry":"Norway","toICAO":"ENGM","durationMinutes":120,"source":"embedded"},
   {"fromCity":"Frankfurt am Main","fromCountry":"Germany","fromICAO":"EDDF","toCity":"Amsterdam","toCountry":"Netherlands","toICAO":"EHAM","durationMinutes":70,"source":"embedded"},
@@ -264,7 +257,6 @@ const AIRLINES = [
 function esc(s){ return String(s||'').replace(/[&<>"']/g,c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
 function randInt(min,max){ return Math.floor(Math.random()*(max-min+1))+min; }
 function pad(n){ return String(n).padStart(2,'0'); }
-
 function haversineKm(aLat,aLon,bLat,bLon){
   const R=6371, toRad=x=>x*Math.PI/180;
   const dLat=toRad(bLat-aLat), dLon=toRad(bLon-aLon);
@@ -404,18 +396,16 @@ function renderAirlines(){
     groupEl.appendChild(list);
     airlinesWrap.appendChild(groupEl);
 
-    // collapse/expand logic
+    // collapse/expand
     let collapsed = false;
     head.addEventListener('click', ()=>{
       const chev = head.querySelector('.chev');
       if(!collapsed){
-        // collapse
         const full = list.scrollHeight;
         list.style.height = full + 'px';
         requestAnimationFrame(()=>{ list.style.height = '0px'; chev.style.transform = 'rotate(-90deg)'; });
         collapsed = true;
       } else {
-        // expand
         list.style.height = '0px';
         requestAnimationFrame(()=>{ list.style.height = list.scrollHeight + 'px'; head.querySelector('.chev').style.transform = 'rotate(0deg)'; });
         collapsed = false;
@@ -428,7 +418,7 @@ function renderAirlines(){
   });
 }
 
-/* ================ Fleet render: compact, city+ICAO ================ */
+/* ================ Fleet render: right panel ================ */
 function renderFleetList(){
   if(!fleetListEl) return;
   fleetListEl.innerHTML = '';
@@ -449,8 +439,10 @@ function renderFleetList(){
     left.appendChild(main);
 
     const right = document.createElement('div'); right.className = 'fleet-right';
-    const meta = document.createElement('div'); meta.className = 'fleet-meta'; meta.textContent = `${ac.rangeKm} km · ${ac.seats} seats`;
-    const status = document.createElement('div'); status.innerHTML = ac.status === 'idle' ? `<span class="status-badge" style="background:#083b22;color:#bff2be">idle</span>` : `<span class="status-badge" style="background:#603f00;color:#fff0b8">inFlight</span>`;
+    const meta = document.createElement('div'); meta.className = 'fleet-meta';
+    meta.textContent = `${ac.rangeKm} km · ${ac.seats} seats`;
+    const status = document.createElement('div');
+    status.innerHTML = ac.status === 'idle' ? `<span class="status-badge" style="background:#083b22;color:#bff2be">idle</span>` : `<span class="status-badge" style="background:#603f00;color:#fff0b8">inFlight</span>`;
     right.appendChild(meta); right.appendChild(status);
 
     div.appendChild(left); div.appendChild(right);
@@ -458,7 +450,7 @@ function renderFleetList(){
   });
 }
 
-/* housekeeper */
+/* housekeeping */
 function fleetHousekeeping(){
   const now = Date.now();
   let changed = false;
@@ -475,7 +467,7 @@ function fleetHousekeeping(){
   renderAssignLog();
 }
 
-/* ================ Assignment (keeps prior logic) ================ */
+/* ================ Assignment logic (unchanged) ================ */
 function findSuitableAircraftSmart(route, nowTs=Date.now()){
   const distanceKm = estimateDistanceKm(route.fromICAO, route.toICAO);
   const safety = 0.95;
@@ -507,7 +499,7 @@ function assignAircraftToRouteSmart(route){
   return { ok:true, aircraft: ac, distanceKm };
 }
 
-/* assign log rendering */
+/* assign log */
 function renderAssignLog(){
   if(!assignLogEl) return;
   const items = FLEET_LOG.slice(-12).reverse();
@@ -524,7 +516,7 @@ function renderAssignLog(){
   }).map(s=>`<div style="margin-bottom:6px">${esc(s)}</div>`).join('');
 }
 
-/* ================ Filtering & generate ================ */
+/* ================ Duration filter & generate ================ */
 function routesInDurationInterval(routes, durIdx){
   if(typeof durIdx !== 'number' || durIdx === null) return routes.slice();
   const interval = DURATIONS[durIdx];
@@ -554,6 +546,8 @@ function generateFlight(){
   if(filteredByDur.length > 0) pool = filteredByDur;
   const route = pool[randInt(0, pool.length-1)];
   const assign = assignAircraftToRouteSmart(route);
+
+  // time in flight display (hours:minutes) — restored and styled
   let minutes;
   if (Number.isFinite(route.durationMinutes)) minutes = Math.round(route.durationMinutes);
   else {
@@ -562,13 +556,16 @@ function generateFlight(){
   }
   const hh = Math.floor(minutes/60), mm = minutes % 60;
   const time = pad(hh) + ':' + pad(mm);
+
   resultEl.style.display = 'block';
   let acHtml = '';
   if(assign.ok){
-    acHtml = `<div class="row"><div class="label">Aircraft</div><div class="val">${esc(assign.aircraft.id)} · ${esc(assign.aircraft.type)} · seats ${assign.aircraft.seats}</div></div>`;
+    acHtml = `<div class="row"><div class="label">Aircraft</div><div class="val">${esc(assign.aircraft.id)} · ${esc(assign.aircraft.type)} · ${assign.aircraft.seats} seats</div></div>
+              <div class="row"><div class="label">Назначение</div><div class="val">${esc(assign.aircraft.nextLocation || route.toICAO)}</div></div>`;
   } else {
     acHtml = `<div class="row"><div class="label">Aircraft</div><div class="val" style="color:#ffcc88">Нет подходящего самолёта (расстояние ${assign.distanceKm || 'n/a'} km)</div></div>`;
   }
+
   resultEl.innerHTML = `
     <div class="row"><div class="label">Авиакомпания</div><div class="val">${esc(airline.name)}</div></div>
     <div class="row"><div class="label">Отправление</div><div class="val">${esc(route.fromCity)} <span class="icao">(${esc(route.fromICAO)})</span></div></div>
